dhall/tests/type-inference/failure/unit/RecordTypeValueMember.txt
Type error: error: InvalidFieldType
 --> <current file>:1:1
  |
1 | { x : True }
  | ^^^^^^^^^^^^ InvalidFieldType
  |
